# wiki-style-app

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
wiki/: app.db  app.py  app.sql  settings.py
wiki/components/: form_data.py
wiki/db/: documents.py  engine.py  models.py
wiki/static/: style.css
wiki/templates/: base.html  editor.html  listing.html  view.html
